--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Customers/CustomersIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Customers/CustomersIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Clientes
+            <i class="oi oi-person"></i> Clientes
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Cliente</a>
         </span>
     </div>
