--- a/WaCollaborative/WaCollaborative.Frontend/Pages/DemandTypes/DemandTypesIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/DemandTypes/DemandTypesIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-globe"></i> Tipos de Demandas
+            <i class="oi oi-ellipses"></i> Tipos de Demandas
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Tipo de Demanda</a>
         </span>
     </div>
