--- a/WaCollaborative/WaCollaborative.Frontend/Pages/DistributionChannels/DistributionChannelsIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/DistributionChannels/DistributionChannelsIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Canales de Distribución
+            <i class="oi oi-map-marker"></i> Canales de Distribución
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Nuevo Canal de Distribución</a>
         </span>
     </div>
