--- a/WaCollaborative/WaCollaborative.Frontend/Pages/EventTypes/EventTypesIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/EventTypes/EventTypesIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Tipos de Evento
+            <i class="oi oi-eject"></i> Tipos de Evento
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Nuevo Tipo de Evento</a>
         </span>
     </div>
