--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Portfolios/PortfoliosIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Portfolios/PortfoliosIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-globe"></i> Portafolios
+            <i class="oi oi-briefcase"></i> Portafolios
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Portafolio</a>
         </span>
     </div>
