--- a/WaCollaborative/WaCollaborative.Frontend/Pages/StatusTypes/StatusTypesIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/StatusTypes/StatusTypesIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Tipos de Estados
+            <i class="oi oi-audio-spectrum"></i> Tipos de Estados
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Nuevo Tipo de Estado</a>
         </span>
     </div>
