--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">WaCollaborative.Frontend</a>
+        <a class="navbar-brand" href="">Wa Collaborative</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/collaboration">
-                <span class="oi oi-globe" aria-hidden="true"></span> Colaboración
+                <span class="oi oi-loop-square" aria-hidden="true"></span> Colaboración
             </NavLink>
         </div>
         <AuthorizeView Roles="Planner">
@@ -27,7 +27,7 @@
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/customers">
-                    <span class="oi oi-globe" aria-hidden="true"></span> Clientes
+                    <span class="oi oi-person" aria-hidden="true"></span> Clientes
                 </NavLink>
             </div>
             <div class="nav-item px-3">
@@ -36,13 +36,13 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/measurementUnits">
-                    <span class="oi oi-beaker" aria-hidden="true"></span> Unidades de Medida
+                <NavLink class="nav-link" style="line-height: 1rem" href="/measurementUnits">
+                    <span class="oi oi-underline" aria-hidden="true"></span> Unidades de Medida
                 </NavLink>
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/categories">
-                    <span class="oi oi-briefcase" aria-hidden="true"></span> Categorias
+                    <span class="oi oi-spreadsheet" aria-hidden="true"></span> Categorías
                 </NavLink>
             </div>
             <div class="nav-item px-3">
@@ -52,26 +52,26 @@
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/status">
-                    <span class="oi oi-ellipses" aria-hidden="true"></span> Estados
+                    <span class="oi oi-audio" aria-hidden="true"></span> Estados
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/statustypes">
-                    <span class="oi oi-eject" aria-hidden="true"></span> Tipos de Estados
+                <NavLink class="nav-link" style="line-height: 1rem" href="/statustypes">
+                    <span class="oi oi-audio-spectrum" aria-hidden="true"></span> Tipos de Estados
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/demandtypes">
+                <NavLink class="nav-link" style="line-height: 1rem"  href="/demandtypes">
                     <span class="oi oi-ellipses" aria-hidden="true"></span> Tipos de Demanda
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/eventtypes">
+                <NavLink class="nav-link" style="line-height: 1rem" href="/eventtypes">
                     <span class="oi oi-eject" aria-hidden="true"></span> Tipos de Evento
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/distributionchannels">
+                <NavLink class="nav-link" style="line-height: 1rem" href="/distributionchannels">
                     <span class="oi oi-map-marker" aria-hidden="true"></span> Canales de Distribución
                 </NavLink>
             </div>
@@ -82,17 +82,17 @@
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/internalroles">
-                    <span class="oi oi-people" aria-hidden="true"></span> Roles
+                    <span class="oi oi-badge" aria-hidden="true"></span> Roles
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/collaborationCalendars">
-                    <span class="oi oi-people" aria-hidden="true"></span> Calendario de Colaboración
+                <NavLink class="nav-link" style="line-height: 1rem" href="/collaborationCalendars">
+                    <span class="oi oi-calendar" aria-hidden="true"></span> Calendario de Colaboración
                 </NavLink>
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/portfolios">
-                    <span class="oi oi-people" aria-hidden="true"></span> Portafolio
+                    <span class="oi oi-briefcase" aria-hidden="true"></span> Portafolio
                 </NavLink>
             </div>
         </AuthorizeView>        
