--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Categories/CategoriesIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Categories/CategoriesIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Categorias
+            <i class="oi oi-spreadsheet"></i> Categorías
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Categoría</a>
         </span>
     </div>
