--- a/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborationCalendars/CollaborationCalendarIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborationCalendars/CollaborationCalendarIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Calendarios de Colaboración
+            <i class="oi oi-calendar"></i> Calendarios de Colaboración
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i>Adicionar Calendario de Colaboración</a>
         </span>
     </div>
