--- a/WaCollaborative/WaCollaborative.Frontend/Pages/InternalRoles/InternalRolesIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/InternalRoles/InternalRolesIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Roles
+            <i class="oi oi-badge"></i> Roles
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i>Adicionar Rol</a>
         </span>
     </div>
