--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Products/ProductsIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Products/ProductsIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Productos
+            <i class="oi oi-beaker"></i> Productos
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Producto</a>
         </span>
     </div>
