--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Segments/SegmentsIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Segments/SegmentsIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-list"></i> Segmentos
+            <i class="oi oi-aperture"></i> Segmentos
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Nuevo Segmento</a>
         </span>
     </div>
