--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Status/StatusIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Status/StatusIndex.razor
@@ -6,7 +6,7 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="oi oi-globe"></i> Estados
+            <i class="oi oi-audio"></i> Estados
             <a class="btn btn-sm btn-primary float-end" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Estado</a>
         </span>
     </div>
