--- a/WaCollaborative/WaCollaborative.Frontend/_Imports.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/_Imports.razor
@@ -26,3 +26,4 @@
 @using MudBlazor
 @using WaCollaborative.Frontend.Pages.PortfolioCustomers
 @using WaCollaborative.Frontend.Pages.PortfolioProducts
+@using System.Globalization
