--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -18,7 +18,13 @@
             <NavLink class="nav-link" href="/collaboration">
                 <span class="oi oi-loop-square" aria-hidden="true"></span> Colaboración
             </NavLink>
-        </div>       
+        </div>    
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/collaborationDemo">
+                <span class="oi oi-loop-square" aria-hidden="true"></span> Colaboración Demo
+            </NavLink>
+        </div>
 
         <AuthorizeView Roles="Planner">
             <div class="nav-item px-3">
