--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Customers/ShippingPointCreate.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Customers/ShippingPointCreate.razor
@@ -4,7 +4,7 @@
 @inject SweetAlertService sweetAlertService
 @inject NavigationManager navigationManager
 
-<h4>Agregar cliente al portafolio</h4>
+<h4>Agregar Punto de envío al cliente</h4>
 
 @if (loading)
 {
