--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
         
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/collaborationDemo">
-                <span class="oi oi-loop-square" aria-hidden="true"></span> Colaboración Demo
+                <span class="oi oi-question-mark" aria-hidden="true"></span> Colaboración Demo
             </NavLink>
         </div>
 
