--- a/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/CollaborativeDemandIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/CollaborativeDemandIndex.razor
@@ -11,86 +11,89 @@
     <Loading />
 }
 else
-{    
-        <div class="card">
-            <div class="card-header">
-                <span>
-                    <i class="oi oi-people" /> Demanda Collaborativa
-                </span>
-            </div>
-            <div class="card-body">
-                <div class="row-cols-lg-9 row-cols-md-9 row-cols-sm-9 ">
+{   
+    <div class="container-fluid">
+        <div class="row-cols-lg-9 row-cols-md-9 row-cols-sm-9 ">
 
-                    <MudDataGrid T="CollaborativeDemandDTO" MultiSelection="true" Items="@CollaborativeDemands"
-                                 SortMode="SortMode.Multiple" Filterable="true"
-                                 ReadOnly="@_isReadOnly" EditMode="@(_isCellEditMode ? DataGridEditMode.Cell : DataGridEditMode.Form)"
-                                 StartedEditingItem="@StartedEditingItem" CanceledEditingItem="@CanceledEditingItem" CommittedItemChanges="@CommittedItemChanges"
-                                 Bordered="true" Dense="true" EditTrigger="@(_editTriggerRowClick ? DataGridEditTrigger.OnRowClick : DataGridEditTrigger.Manual)"
-                                 Hideable="true">
-                        <ToolBarContent>
+            <MudDataGrid T="CollaborativeDemandDTO" 
+                Items="@CollaborativeDemands"
+                         SortMode="SortMode.Multiple" Filterable="true"
+                         ReadOnly="@_isReadOnly" EditMode="@(_isCellEditMode ? DataGridEditMode.Cell : DataGridEditMode.Form)"
+                         StartedEditingItem="@StartedEditingItem" CanceledEditingItem="@CanceledEditingItem" CommittedItemChanges="@CommittedItemChanges"
+                         Bordered="true" Dense="true" EditTrigger="@(_editTriggerRowClick ? DataGridEditTrigger.OnRowClick : DataGridEditTrigger.Manual)"
+                         Hideable="true">
+                <ToolBarContent>
 
-                            <div class="mb-2" style="display: flex; flex-wrap:wrap;align-items: center; ">
+                    <div class="mb-2" style="display: flex; flex-wrap:wrap;align-items: center; ">
 
-                                <div class="mx-2">
-                                    <button type="button" class="btn btn-info" @onclick="ExportarExcel"><i class="oi oi-spreadsheet" /> Exportar a Excel</button>
-                                <AuthorizeView Roles="Planner">
-                            <Authorized>
-                                        <button type="button" class="btn btn-warning" style="margin-left:5px;" @onclick="ApproveDemandPlan" disabled="@(!isDemandPlanActive)"><i class="oi oi-check" /> Aprobar Plan</button>
-                                        @if (estadoPlanDemanda != EnumStatus.Activo.ToString())
-                                        {
-                                            <button type="button" class="btn btn-warning" style="margin-left:5px;" @onclick="ActiveDemandPlan" disabled="@(isDemandPlanActive)"><i class="oi oi-aperture" /> Activar Plan</button>
-                                            
-                                        }
-                                    </Authorized>
-                                </AuthorizeView>
-                                <label class="btn btn-secondary" style="margin-left:5px;" disabled>Plan de demanda estado @estadoPlanDemanda</label>
-                                </div>                              
-                            </div>                                                            
-                        </ToolBarContent>
-                        <Columns>
-                            <SelectColumn T="CollaborativeDemandDTO" />
-                            <PropertyColumn Property="x => x.CollaborativeDemandId" IsEditable="false" Hidden />
-                             <PropertyColumn Property="x => x.CollaborativeDemandDetailId" IsEditable="false" Hidden />
-                             <PropertyColumn Property="x => x.CustomerName" IsEditable="false" Title="Cliente" Class="mud-col-lg-6 mud-col-md-8" />
-                             <PropertyColumn Property="x => x.CityName" IsEditable="false" Title="Ciudad" Class="mud-col-lg-6 mud-col-md-8" />
-                             <PropertyColumn Property="x => x.DistributionChannel" IsEditable="false" Title="Canal Distribución" Class="mud-col-lg-6 mud-col-md-8" />
-                             <PropertyColumn Property="x => x.ShippingPointName" IsEditable="false" Title="Punto de Envío" Class="mud-col-lg-6 mud-col-md-8" />
-                             <PropertyColumn Property="x => x.ProductName" IsEditable="false" Title="Producto" Class="mud-col-lg-6 mud-col-md-8" />
-                             <PropertyColumn Property="x => x.YearMonth" IsEditable="false" Title="Año-Mes" Class="mud-col-lg-6 mud-col-md-8" />
-                             <PropertyColumn Property="x => x.Quantity" IsEditable="true" Title="Colaboración" Format="N2" Culture="@(new CultureInfo("en-US"))" Class="mud-col-lg-6 mud-col-md-8" />
-                         </Columns>
-                         <PagerContent>
-                             <MudDataGridPager T="CollaborativeDemandDTO" />
-                         </PagerContent>
-                     </MudDataGrid>
-                     <div class="d-flex flex-wrap mt-4 visually-hidden">
-                         <div class="d-flex justify-start align-center">
+                        <div class="mx-2">
+                            <button type="button" class="btn btn-info" @onclick="ExportarExcel"><i class="oi oi-spreadsheet" /> Exportar a Excel</button>
+                            <AuthorizeView Roles="Planner">
+                                <Authorized>
+                                    <button type="button" class="btn btn-warning" style="margin-left:5px;" @onclick="ApproveDemandPlan" disabled="@(!isDemandPlanActive)"><i class="oi oi-check" /> Aprobar Plan</button>
+                                    @if (estadoPlanDemanda != EnumStatus.Activo.ToString())
+                                    {
+                                        <button type="button" class="btn btn-warning" style="margin-left:5px;" @onclick="ActiveDemandPlan" disabled="@(isDemandPlanActive)"><i class="oi oi-aperture" /> Activar Plan</button>
 
-                             <MudSwitch @bind-Checked="@_isCellEditMode">Cell</MudSwitch>
-                         </div>
-                         <div class="d-flex justify-start align-center">
-                             <p class="mud-typography mud-typography-body1 mud-inherit-text mr-2">Manual</p>
-                             <MudSwitch @bind-Checked="@_editTriggerRowClick">On Row Click</MudSwitch>
-                         </div>
-                     </div>
-                     <MudExpansionPanels Style="flex:1">
-                         <MudExpansionPanel Text="Show Events">
-                             @foreach (var message in _events)
-                            {
-                                <MudText Typo="@Typo.body2">@message</MudText>
-                            }
-                            @if (_events.Count > 0)
-                            {
-                                <div class="d-flex">
-                                    <MudSpacer />
-                                    <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
-                                </div>
-                            }
-                        </MudExpansionPanel>
-                    </MudExpansionPanels>
-                </div>
-            </div>
-        </div>    
+                                    }
+                                </Authorized>
+                            </AuthorizeView>
+                            <label class="btn btn-secondary" style="margin-left:5px;" disabled>Plan de demanda estado @estadoPlanDemanda</label>
+                        </div>
+                    </div>
+                </ToolBarContent>
+                <Columns>
+                    <SelectColumn T="CollaborativeDemandDTO" />
+                    <PropertyColumn Property="x => x.CollaborativeDemandId" IsEditable="false" Hidden />
+                     <PropertyColumn Property="x => x.CollaborativeDemandDetailId" IsEditable="false" Hidden />
+                     <PropertyColumn Property="x => x.CustomerName" IsEditable="false" Title="Cliente" Class="mud-col-lg-6 mud-col-md-6" />
+                     <PropertyColumn Property="x => x.CityName" IsEditable="false" Title="Ciudad" Class="mud-col-lg-6 mud-col-md-6" />
+                     <PropertyColumn Property="x => x.DistributionChannel" IsEditable="false" Title="Canal Distribución" Class="mud-col-lg-6 mud-col-md-6" />
+                     <PropertyColumn Property="x => x.ShippingPointName" IsEditable="false" Title="Punto de Envío" Class="mud-col-lg-6 mud-col-md-6" />
+                     <PropertyColumn Property="x => x.ProductName" IsEditable="false" Title="Producto" Class="mud-col-lg-6 mud-col-md-6" />
+                     <PropertyColumn Property="x => x.YearMonth" IsEditable="false" Title="Año-Mes" Class="mud-col-lg-6 mud-col-md-6" />
+                     <PropertyColumn Property="x => x.Quantity" IsEditable="true" Title="Colaboración" Format="N2" Culture="@(new CultureInfo("en-US"))" Class="mud-col-lg-6 mud-col-md-6" />
+                     <TemplateColumn CellClass="d-flex justify-end">
+                         <CellTemplate>
+                             <MudStack Row>
+                             <MudRating Size="@Size.Small" SelectedValue="@context.Item.CollaborativeDemandDetailId" />
+                             <MudButton Size="@Size.Small" Variant="@Variant.Filled" Color="@Color.Primary">Agregar Colabora</MudButton>
+                         </MudStack>
+                     </CellTemplate>
+                 </TemplateColumn>
+             </Columns>
+             <PagerContent>
+                 <MudDataGridPager T="CollaborativeDemandDTO" />
+             </PagerContent>
+         </MudDataGrid>
+         <div class="d-flex flex-wrap mt-4 visually-hidden">
+             <div class="d-flex justify-start align-center">
+
+                 <MudSwitch @bind-Checked="@_isCellEditMode">Cell</MudSwitch>
+             </div>
+             <div class="d-flex justify-start align-center">
+                 <p class="mud-typography mud-typography-body1 mud-inherit-text mr-2">Manual</p>
+                 <MudSwitch @bind-Checked="@_editTriggerRowClick">On Row Click</MudSwitch>
+             </div>
+         </div>
+         @* <MudExpansionPanels Style="flex:1">
+             <MudExpansionPanel Text="Show Events">
+                 @foreach (var message in _events)
+                    {
+                        <MudText Typo="@Typo.body2">@message</MudText>
+                    }
+                    @if (_events.Count > 0)
+                    {
+                        <div class="d-flex">
+                            <MudSpacer />
+                            <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
+                        </div>
+                    }
+                </MudExpansionPanel>
+            </MudExpansionPanels> *@
+        </div>
+    </div>
+                     
 }
 @code {
 
@@ -231,7 +234,7 @@ else
     private async Task ApproveDemandPlan()
     {
         await ChangeDemandPlandStatus(EnumStatus.Aprobado.ToString());
-        
+
     }
 
     private async Task ActiveDemandPlan()
@@ -321,6 +324,7 @@ else
 
         collaborationCyclesList = responseHttp.Response;
     }
+
     private async Task UpdateAsync(CollaborationCycle collaborationCycle)
     {
         if (collaborationCycle!.Id <= 0)
@@ -399,6 +403,8 @@ else
                 Timer = 3000
             });
         await toast.FireAsync(icon: SweetAlertIcon.Success, message: "Cambios guardados con éxito.");
+
+        await OnInitializedAsync();
     }
 
     bool EsDecimalOEntero(decimal cantidad)
