--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Portfolios/PortfoliosIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Portfolios/PortfoliosIndex.razor
@@ -62,6 +62,8 @@
 @code {
 
     private List<Portfolio>? portfolios;
+    private CollaborativeDemand? collaborativeDemand = new CollaborativeDemand();
+    private List<CollaborativeDemand>? collaborativeDemands = new List<CollaborativeDemand>();
     private int currentPage = 1;
     private int totalPages;
 
@@ -81,6 +83,7 @@
         await LoadAsync();
     }
 
+    
     private async Task ShowModalAsync(int id = 0, bool isEdit = false)
     {
         IModalReference modalReference;
