--- a/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/CollaborativeDemandIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/CollaborativeDemand/CollaborativeDemandIndex.razor
@@ -11,19 +11,18 @@
     <Loading />
 }
 else
-{   
+{
     <div class="container-fluid">
         <div class="row-cols-lg-9 row-cols-md-9 row-cols-sm-9 ">
 
-            <MudDataGrid T="CollaborativeDemandDTO" 
-                Items="@CollaborativeDemands"
+            <MudDataGrid T="CollaborativeDemandDTO" Height="600px"
+                         Items="@CollaborativeDemands"
                          SortMode="SortMode.Multiple" Filterable="true"
                          ReadOnly="@_isReadOnly" EditMode="@(_isCellEditMode ? DataGridEditMode.Cell : DataGridEditMode.Form)"
                          StartedEditingItem="@StartedEditingItem" CanceledEditingItem="@CanceledEditingItem" CommittedItemChanges="@CommittedItemChanges"
                          Bordered="true" Dense="true" EditTrigger="@(_editTriggerRowClick ? DataGridEditTrigger.OnRowClick : DataGridEditTrigger.Manual)"
                          Hideable="true">
                 <ToolBarContent>
-
                     <div class="mb-2" style="display: flex; flex-wrap:wrap;align-items: center; ">
 
                         <div class="mx-2">
@@ -36,9 +35,10 @@ else
                                         <button type="button" class="btn btn-warning" style="margin-left:5px;" @onclick="ActiveDemandPlan" disabled="@(isDemandPlanActive)"><i class="oi oi-aperture" /> Activar Plan</button>
 
                                     }
+                                    @* <a class="btn btn-primary" style="margin-left:5px;" @onclick=@(() => ShowModalAsync())><i class="oi oi-plus"></i> Adicionar Plan de Demanda</a> *@
                                 </Authorized>
                             </AuthorizeView>
-                            <label class="btn btn-secondary" style="margin-left:5px;" disabled>Plan de demanda estado @estadoPlanDemanda</label>
+                            <label class="btn btn-secondary" style="margin-left:5px;" disabled>Plan de demanda estado: @estadoPlanDemanda</label>
                         </div>
                     </div>
                 </ToolBarContent>
@@ -53,47 +53,47 @@ else
                      <PropertyColumn Property="x => x.ProductName" IsEditable="false" Title="Producto" Class="mud-col-lg-6 mud-col-md-6" />
                      <PropertyColumn Property="x => x.YearMonth" IsEditable="false" Title="Año-Mes" Class="mud-col-lg-6 mud-col-md-6" />
                      <PropertyColumn Property="x => x.Quantity" IsEditable="true" Title="Colaboración" Format="N2" Culture="@(new CultureInfo("en-US"))" Class="mud-col-lg-6 mud-col-md-6" />
-                     <TemplateColumn CellClass="d-flex justify-end">
-                         <CellTemplate>
-                             <MudStack Row>
-                             <MudRating Size="@Size.Small" SelectedValue="@context.Item.CollaborativeDemandDetailId" />
-                             <MudButton Size="@Size.Small" Variant="@Variant.Filled" Color="@Color.Primary">Agregar Colabora</MudButton>
-                         </MudStack>
-                     </CellTemplate>
-                 </TemplateColumn>
-             </Columns>
-             <PagerContent>
-                 <MudDataGridPager T="CollaborativeDemandDTO" />
-             </PagerContent>
-         </MudDataGrid>
-         <div class="d-flex flex-wrap mt-4 visually-hidden">
-             <div class="d-flex justify-start align-center">
+                     @*  <TemplateColumn CellClass="d-flex justify-end">
+                <CellTemplate>
+                <MudStack Row>
+                <MudRating Size="@Size.Small" SelectedValue="@context.Item.CollaborativeDemandDetailId" />
+                <MudButton Size="@Size.Small" Variant="@Variant.Filled" Color="@Color.Primary">Agregar Colabora</MudButton>
+                </MudStack>
+                </CellTemplate>
+                </TemplateColumn> *@
+                 </Columns>
+                 <PagerContent>
+                     <MudDataGridPager T="CollaborativeDemandDTO" />
+                 </PagerContent>
+             </MudDataGrid>
+             <div class="d-flex flex-wrap mt-4 visually-hidden">
+                 <div class="d-flex justify-start align-center">
 
-                 <MudSwitch @bind-Checked="@_isCellEditMode">Cell</MudSwitch>
+                     <MudSwitch @bind-Checked="@_isCellEditMode">Cell</MudSwitch>
+                 </div>
+                 <div class="d-flex justify-start align-center">
+                     <p class="mud-typography mud-typography-body1 mud-inherit-text mr-2">Manual</p>
+                     <MudSwitch @bind-Checked="@_editTriggerRowClick">On Row Click</MudSwitch>
+                 </div>
              </div>
-             <div class="d-flex justify-start align-center">
-                 <p class="mud-typography mud-typography-body1 mud-inherit-text mr-2">Manual</p>
-                 <MudSwitch @bind-Checked="@_editTriggerRowClick">On Row Click</MudSwitch>
-             </div>
-         </div>
-         @* <MudExpansionPanels Style="flex:1">
-             <MudExpansionPanel Text="Show Events">
-                 @foreach (var message in _events)
-                    {
-                        <MudText Typo="@Typo.body2">@message</MudText>
-                    }
-                    @if (_events.Count > 0)
-                    {
-                        <div class="d-flex">
-                            <MudSpacer />
-                            <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
-                        </div>
-                    }
-                </MudExpansionPanel>
-            </MudExpansionPanels> *@
+             @* <MudExpansionPanels Style="flex:1">
+        <MudExpansionPanel Text="Show Events">
+        @foreach (var message in _events)
+        {
+        <MudText Typo="@Typo.body2">@message</MudText>
+        }
+        @if (_events.Count > 0)
+        {
+        <div class="d-flex">
+        <MudSpacer />
+        <MudButton Class="mt-3" ButtonType="ButtonType.Button" Variant="Variant.Filled" OnClick="@(() => _events.Clear())">Clear</MudButton>
         </div>
-    </div>
-                     
+        }
+        </MudExpansionPanel>
+        </MudExpansionPanels> *@
+         </div>
+     </div>
+
 }
 @code {
 
@@ -105,7 +105,7 @@ else
     private bool _isCellEditMode = true;
     private bool _editTriggerRowClick;
     private bool isDemandPlanActive = true;
-    private string estadoPlanDemanda = "";    
+    private string estadoPlanDemanda = "";
     private DateTime collaborationEndDate;
 
     public UserCalendarDTO? userCalendarDTO { get; set; }
@@ -119,9 +119,12 @@ else
     private List<CollaborationCycle>? collaborationCyclesList;
     private CollaborationCycle collaborationCycle;
 
+    [CascadingParameter]
+    IModalService Modal { get; set; } = default!;
+
     [Parameter]
     [SupplyParameterFromQuery]
-    public string Page { get; set; } = "";
+    public string Page { get; set; } = string.Empty;
 
 
     protected async override Task OnInitializedAsync()
@@ -130,6 +133,26 @@ else
         await LoadStatudCollaborationAsync();
         await LoadAsync();
 
+    }
+
+    private async Task ShowModalAsync(int id = 0, bool isEdit = false)
+    {
+        IModalReference modalReference;
+
+        if (isEdit)
+        {
+            modalReference = Modal.Show<CollaborativeDemandEdit>(string.Empty, new ModalParameters().Add("CollaborativeDemandId", id));
+        }
+        else
+        {
+            modalReference = Modal.Show<CollaborativeDemandCreate>();
+        }
+
+        var result = await modalReference.Result;
+        if (result.Confirmed)
+        {
+            await LoadAsync();
+        }
     }
 
     private async Task<bool> ValidateEditionGrid()
@@ -182,7 +205,7 @@ else
         {
             await LoadPagesAsync();
         }
-    }   
+    }
 
     private async Task<bool> LoadListAsync(int page)
     {
@@ -279,22 +302,22 @@ else
                 StatusId = statusId
             };
         await UpdateAsync(collaborationCycle);
-        _isCellEditMode = status == EnumStatus.Activo.ToString(); 
+        _isCellEditMode = status == EnumStatus.Activo.ToString();
         isDemandPlanActive = status == EnumStatus.Activo.ToString();
         estadoPlanDemanda = status;
     }
 
     private async Task LoadStatusAsync()
-    {        
+    {
         var responseHttp = await repository.GetAsync<List<Status>>("/api/Status/combo");
         if (responseHttp.Error)
-        {            
+        {
             var message = await responseHttp.GetErrorMessageAsync();
             await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
             return;
         }
 
-        Status = responseHttp.Response;        
+        Status = responseHttp.Response;
     }
 
     private async Task LoadCollaborationCyclesAsync()
@@ -410,16 +433,16 @@ else
     bool EsDecimalOEntero(decimal cantidad)
     {
         return decimal.Truncate(cantidad) == cantidad;
-    }    
+    }
 
     private async Task ExportarExcel()
     {
         int page = 1;
         try
-        {          
+        {
 
             var url = $"api/CollaborativeDemand/ExcelGenerate?page={page}";
-            
+
             var responseHTTP = await repository.GetExportAsync(url);
 
             if (responseHTTP.Error)
