--- a/WaCollaborative/WaCollaborative.Frontend/Pages/Portfolios/PortfoliosIndex.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Pages/Portfolios/PortfoliosIndex.razor
@@ -1,4 +1,4 @@
-﻿@page "/portfolios"
+﻿@* @page "/portfolios" *@
 @attribute [Authorize(Roles = "Planner")]
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
