--- a/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
+++ b/WaCollaborative/WaCollaborative.Frontend/Shared/NavMenu.razor
@@ -102,6 +102,11 @@
                     <span class="oi oi-briefcase" aria-hidden="true"></span> Portafolio
                 </NavLink>
             </div>
+            @* <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/Userportfolios">
+                    <span class="oi oi-briefcase" aria-hidden="true"></span> Portafolio_V2
+                </NavLink>
+            </div> *@
         </AuthorizeView>        
     </nav>
 </div>
